--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,6 @@ html(lang='en')
     title Price Probe
     base(href='/')
     link(rel='icon' type='image/x-icon', href='favicon.ico')
-
+    link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400,700&amp;subset=latin-ext', rel='stylesheet')
   body
     app-root App is loading ...
