--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -1,4 +1,13 @@
-app-header-bar
-div.container
+nav.navbar.navbar-default
+  div.container-fluid
+    div.navbar-header
+      a.navbar-brand(href='#') WebSiteName
+  ul.nav.navbar-nav
+    li.active
+      a(href='#') Home
+    li
+      a(href='#') Home
+main.container
   router-outlet
-  app-footer
+footer.container
+  p.footer-block {{ 'Copyright' | translate }}  &copy; {{ 'Price Probe 2017' | translate }}
