--- a/src/app/core/headerbar/headerbar.component.scss
+++ b/src/app/core/headerbar/headerbar.component.scss
@@ -1,6 +1,6 @@
 .logo {
   display: block;
-  background: url("../../../../assets/images/price_probe_logo.png") no-repeat center;
+  background: url("../../../assets/images/price_probe_logo.png") no-repeat center;
   height: 40px;
   width: 100px;
   background-size: 100%;
