--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,16 +1,18 @@
 <div class="container">
   <div class="row">
-    <div class="col">
-      <h3> {{ 'Pid' | translate }} {{ item.id }}} </h3>
-      <h4> {{ 'Title' | translate }} {{ item.title }}} </h4>
-      <a class="btn btn-warning" [href]="item.url" target="_blank">
-        {{ 'View on Amazon' | translate }}}
-      </a>
-    </div>
-    <div class="col">
-      <div class="thumbnail">
-        <img [src]="item.image" onerror="this.src='../../../../assets/images/item_not_found.png'"/>
+    <ng-container *ngIf="item$ | async; let item">
+      <div class="col">
+        <h3> {{ 'Pid' | translate }} {{ item.id }}} </h3>
+        <h4> {{ 'Title' | translate }} {{ item.title }}} </h4>
+        <a class="btn btn-warning" [href]="item.url" target="_blank">
+          {{ 'View on Amazon' | translate }}}
+        </a>
       </div>
-    </div>
+      <div class="col">
+        <div class="thumbnail">
+          <img [src]="item.image" onerror="this.src='../../../../assets/images/item_not_found.png'"/>
+        </div>
+      </div>
+    </ng-container>
   </div>
 </div>
