--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,18 +1,16 @@
-<div class="container">
+<div class="container mt-5 pt-5">
   <div class="row">
-    <ng-container *ngIf="item$ | async; let item">
-      <div class="col">
-        <h3> {{ 'Pid' | translate }} {{ item.id }}} </h3>
-        <h4> {{ 'Title' | translate }} {{ item.title }}} </h4>
-        <a class="btn btn-warning" [href]="item.url" target="_blank">
-          {{ 'View on Amazon' | translate }}}
-        </a>
+    <div class="col">
+      <h3> {{ 'PID: ' | translate }} {{ item?.id }} </h3>
+      <h4> {{ 'Title: ' | translate }} {{ item?.title }} </h4>
+      <button class="btn btn-warning mx-1" [disabled]="!item?.url || item?.url.length === 0" (click)="goToAmazon(item)">
+        {{ 'View on Amazon' | translate }}
+      </button>
+    </div>
+    <div class="col">
+      <div class="thumbnail details-image">
+        <img [src]="item?.image" onerror="this.src='../../../../assets/images/item_not_found.png'"/>
       </div>
-      <div class="col">
-        <div class="thumbnail">
-          <img [src]="item.image" onerror="this.src='../../../../assets/images/item_not_found.png'"/>
-        </div>
-      </div>
-    </ng-container>
+    </div>
   </div>
 </div>
