--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,6 +5,6 @@
     </ng-container>
   </div>
   <div class="container text-center mt-4" *ngIf="hasNextPaginatedItems$ | async">
-    <button class="btn btn-info" (click)="loadMore()" translate> Load More </button>
+    <button class="btn btn-info pointer" (click)="loadMore()" translate> Load More </button>
   </div>
 </div>
