--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -4,6 +4,8 @@
       <div class="col">
         <h3> <b>{{ "PID: " | translate }}</b> {{ item?.id }} </h3>
         <h4> <b>{{ "Title: " | translate }}</b> {{ item?.title }} </h4>
+        <h4 *ngIf="item?.manufacturer !== 'no_manufacturer'"> <b>{{ "Manufacturer: " | translate }}</b> {{ item?.manufacturer }} </h4>
+        <h4 *ngIf="item?.manufacturer === 'no_manufacturer'"> <b>{{ "Manufacturer: " | translate }}</b> {{ "No manufacturer found" | translate }} </h4>
         <button class="btn btn-warning mx-1" [disabled]="!item?.url || item?.url.length === 0" (click)="goToAmazon(item)">
           {{ "View on Amazon" | translate }}
         </button>
